# bits

./: .gitignore  Benchmarks.md  CMakeLists.txt  README.md  conanfile.py  xmake.lua
.github/workflows/: ci.yml  release.yml
docs/: Doxyfile
examples/: CMakeLists.txt  colormanip.cpp
include/bits/: bits.hpp
tests/: CMakeLists.txt  bench.cpp  bits.cpp
tools/: md2mermaid.py
